[package]
name = "voltdb-client-rust"
version = "0.1.13"
edition = "2024"
authors = ["johnnywale <johnnywalee@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A socket client library for VoltDB server supporting both sync and async operations."
categories = ["database"]
keywords = ["voltdb", "asynchronous", "database-client"]
repository = "https://github.com/johnnywale/voltdb-client-rust"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:dashmap", "dep:bytes"]
tracing = ["dep:tracing"]
metrics = ["dep:metrics"]

[dependencies]
bytebuffer = "2.3.0"
byteorder = "1.5"
chrono = "0.4"
bigdecimal = "0.4.0"
sha2 = "0.10"
quick-error = "2.0.1"
futures = "0.3.31"


tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "time", "macros"], optional = true }
dashmap = { version = "6.0", optional = true }
bytes = { version = "1.5", optional = true }
tracing = { version = "0.1", optional = true }
metrics = { version = "0.24", optional = true }

[dev-dependencies]
testcontainers = { version = "0.26", features = ["blocking"] }
lazy_static = "1.4.0"
tokio = { version = "1.35", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]